# python-introspect

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/source/_static/: .gitkeep
docs/source/_templates/: .gitkeep
src/python_introspect/: __init__.py  exceptions.py  signature_analyzer.py  unified_parameter_analyzer.py
tests/: __init__.py  test_exceptions.py  test_init.py  test_signature_analyzer.py  test_unified_parameter_analyzer.py
